--- a/.github/workflows/daily-sync.yml
+++ b/.github/workflows/daily-sync.yml
@@ -2,14 +2,13 @@ name: Daily Harvard Data Sync and Deploy
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Run every 6 hours
+    - cron: '0 14 * * *'   # 10:00 AM ET
+    - cron: '0 19 * * *'   # 3:00 PM ET
   workflow_dispatch:  # Allow manual triggering
 
 jobs:
   sync-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write   # allow git push
     
     steps:
     - name: Checkout repository
@@ -29,7 +28,20 @@ jobs:
           libxml2-dev \
           libfontconfig1-dev \
           libharfbuzz-dev \
-          libfribidi-dev
+          libfribidi-dev \
+          libfreetype6-dev \
+          libpng-dev \
+          libjpeg-dev \
+          libtiff-dev \
+          libfontconfig1 \
+          libxcb1 \
+          libicu-dev \
+          libcairo2-dev \
+          libgdal-dev \
+          libgeos-dev \
+          libproj-dev \
+          libudunits2-dev
+
         
     - name: Install R packages
       run: Rscript install_packages.R
@@ -42,7 +54,7 @@ jobs:
       run: |
         Rscript -e "rsconnect::setAccountInfo(name='${{ secrets.SHINYAPPS_ACCOUNT }}', token='${{ secrets.SHINYAPPS_TOKEN }}', secret='${{ secrets.SHINYAPPS_SECRET }}')"
         
-    - name: Sync Harvard data
+    - name: Sync GCU data
       run: Rscript automated_data_sync.R
         
     - name: Check if data directory exists
@@ -70,6 +82,7 @@ jobs:
         if git diff --staged --quiet; then
           echo "No changes to commit"
         else
-          git commit -m "Auto-update VMI data $(date)"
+          git commit -m "Auto-update GCU data $(date)"
+          git pull --rebase origin main
           git push
         fi
